fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,16 @@ code {
     monospace;
 }
 
+.app {
+  max-width: 992px;
+}
+
+@media screen and (max-width: 768px) {
+  .app {
+    max-width: 414px;
+  }
+}
+
 @font-face {
   font-family: lobster;
   src: url('./assets/fonts/LobsterTwo-BoldItalic.ttf');
